added button feature and am looking to add functionality next!

--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
   <link rel = "styleSheet" type="text/css" href = "style.css">
 </head>
 <body>
-  <div id = "pokedexTitle"><h1 id = "dex">PokeDex</h1></div>
-  <br>
-    <div>
-      
-    </div>
+  <div id = "searchArea">
+    <h1 id = "insideSearchName">PokeDex</h1>
+    <input type = "text" id = "searchBox" placeholder = "Enter a pokemon!">
+    <button id = "searchButton" class= "button">Button</button>
+    <button id = "randomButton" class= "button">RANDOM BUTTON WOW</button>
+  </div>
+  <div id = "pokedexTitle">
+    <h1 id = "dex">
+      PokeDex
+    </h1>
+  </div>
   <div class = "pokedexContainer">
     <div>
       <ul id = "pokedex"></ul>
     </div>
   </div>
   <h1>  Feel free to support</h1>
-  <script src = "pokedex.js"></script>
+ <script src = "pokedex.js"></script>
 </body>
 
 </html>
