implemented fetch using promise.all and added button functionallity

--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
 </head>
 <body>
   <div id = "searchArea">
-    <h1 id = "insideSearchName">PokeDex</h1>
+    <h1 id = "insideSearchName">
+      PokeDex
+    </h1>
     <input type = "text" id = "searchBox" placeholder = "Enter a pokemon!">
-    <button id = "searchButton" class= "button">Button</button>
-    <button id = "randomButton" class= "button">RANDOM BUTTON WOW</button>
+    <button id = "searchButton" class= "button">
+      SEARCH
+    </button>
+    <button id = "randomButton" class= "button">
+      RANDOM BUTTON WOW
+    </button>
+    <p id = "textToUser">
+      Relive the one of the best eras in pokemon history, the Kanto region's line up of pokemon. Here you will be able to explore
+      all of the nostalgic and iconic pokemon. Freely scroll and click on anyone you can find in the wild. Alternativly you can 
+      search one of your own or even be caught on by surprise by using the random button. Have Fun!
+    </p>
   </div>
   <div id = "pokedexTitle">
     <h1 id = "dex">
