--- a/displayPokemon.html
+++ b/displayPokemon.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Details</title>
+    <link rel = "styleSheet" type="text/css" href = "style2.css">
 </head>
 <body>
-    <div id="pokemonDetails">
-        <button id="backButton">Go Back</button>
-        <h1 id="pokemonName"></h1>
-        <img id="pokemonImage" src="" alt="Pokémon Image" style="width: 450px; height: auto;">
+    <div class = "textArea">
+        <h1 id = "pokemonName">
+            name
+        </h1>
+    </div>
+    <div id=" pokemon">
+        
+
+
     </div>
     <script src="pokemonDetail.js"></script>
 </body>
