more addidtions to aesthetics of the page

--- a/displayPokemon.html
+++ b/displayPokemon.html
@@ -12,10 +12,9 @@
             name
         </h1>
     </div>
-    <div id=" pokemon">
-        
-
-
+    <div id ="pokemonDisplay">
+        <img id = "pokemonImage" src="" alt = "pokemonImage">
+        <p>hi</p>
     </div>
     <script src="pokemonDetail.js"></script>
 </body>
