customization to display page

--- a/displayPokemon.html
+++ b/displayPokemon.html
@@ -14,7 +14,9 @@
     </div>
     <div id ="pokemonDisplay">
         <img id = "pokemonImage" src="" alt = "pokemonImage">
-        <p>hi</p>
+        <br>
+        <div class = "textBox" id="type"></div>
+        <div class = "textBox" id="desc"></div>
     </div>
     <script src="pokemonDetail.js"></script>
 </body>
