--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
       RANDOM BUTTON WOW
     </button>
     <p id = "textToUser">
-      Relive the one of the best eras in pokemon history, the Kanto region's line up of pokemon. Here you will be able to explore
-      all of the nostalgic and iconic pokemon. Freely scroll and click on anyone you can find in the wild. Alternativly you can 
+      Freely scroll and click on anyone you can find in the wild. Alternativly you can 
       search one of your own or even be caught on by surprise by using the random button. Have Fun!
     </p>
   </div>
